<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/autoCompleteTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edt_bg"
            android:ems="10"
            android:hint="@string/firm_name_mobile_no"
            android:lines="1"
            android:maxLines="1"
            android:padding="8dp"
            android:popupBackground="@color/colorLayoutBackground"
            android:text=""
            android:textSize="@dimen/popup_content_text_size"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white">

        </EditText>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ListView
            android:id="@+id/user_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/colorWhite"
            android:dividerHeight="0dp"
            android:scrollbarThumbVertical="@drawable/custom_scroll" />

            <ImageView
                android:id="@+id/imgAddBalanceNoData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/nodata_found"
                android:visibility="gone"/>

        </FrameLayout>

    </LinearLayout>


    <ScrollView
        android:id="@+id/addBalanceLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:visibility="invisible">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edt_bg">

                <EditText
                    android:id="@+id/add_balance_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:enabled="false"
                    android:gravity="center_vertical"
                    android:hint="@string/username"
                    android:padding="10dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textSize="@dimen/content_title_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edt_bg">

                <EditText
                    android:id="@+id/add_balance_fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@color/transparent"
                    android:enabled="false"
                    android:gravity="center_vertical"
                    android:hint="@string/firm_name"
                    android:padding="10dp"
                    android:paddingLeft="25dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textSize="@dimen/content_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edt_bg">

                <EditText
                    android:id="@+id/add_balance_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@color/transparent"
                    android:enabled="false"
                    android:gravity="center_vertical"
                    android:hint="@string/mobile_number"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textSize="@dimen/content_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edt_bg">

                <EditText
                    android:id="@+id/add_balance_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@color/transparent"
                    android:enabled="false"
                    android:gravity="center_vertical"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textSize="@dimen/content_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edt_bg">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/ic_rs" />

                <EditText
                    android:id="@+id/add_balance_current"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@color/transparent"
                    android:enabled="false"
                    android:gravity="center_vertical"
                    android:hint="@string/current_balance"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textSize="@dimen/content_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edt_bg">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/ic_rs" />

                <EditText
                    android:id="@+id/add_balance_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/str_amount"
                    android:inputType="number"
                    android:padding="10dp"
                    android:imeOptions="actionDone"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textSize="@dimen/content_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edt_bg">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/ic_rs" />

                <EditText
                    android:id="@+id/add_balance_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@color/transparent"
                    android:enabled="false"
                    android:gravity="center_vertical"
                    android:hint="@string/total_balance"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textSize="@dimen/content_text_size" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_proceed_fragment_recharge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edt_login_btn"
                android:text="@string/proceed_to_add_balance"
                android:textSize="@dimen/content_text_size" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>